2004-11-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* docs/create_thumbnails.pl: created, to create thumbnails
	* docs/spip_menuboard.xsl: updated. now can create the thumbnails. needs the links now.
	* docs/spipparser.pl: updated.
	* src/boards/click_on_letter.c: (click_on_letter_create_item): fixed alphabet.

2004-11-15  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/wordsgame.c: (pause_board), (start_board),
	(wordsgame_next_level), (wordsgame_move_item),
	(wordsgame_move_items), (player_win): improved the drop speed to
	change speed and fallspeed when list of words on screen is empty 
	(player typed words more fast when it drops).
	May be adjust increment min and max speed by change #define constants.
	Done by Alexey Lubimov

2004-11-14  Bruno coudoin  <bruno.coudoin@free.fr>

	* docs/Makefile.am: added spip utility
	* docs/spip_oneboard.xsl: created this tool to create the screenshot web site in spip format
	* docs/spipparser.pl: -
	* src/boards/wordsgame.c: (wordsgame_create_item): fixed word positionning by Alexey Lubimov

2004-11-14  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/wordsgame.c: (pause_board), (start_board),
	(end_board), (key_press), (wordsgame_next_level),
	(wordsgame_move_item), (wordsgame_move_items),
	(wordsgame_destroy_item), (wordsgame_destroy_items),
	(wordsgame_destroy_all_items), (wordsgame_create_item),
	(wordsgame_add_new_item), (wordsgame_drop_items), (player_win),
	(get_wordfile), (wordsgame_read_wordfile): thread save, rock stable version by Alexey Lubimov
	* src/gcompris/gameutil.c: (g_utf8_strndup): added g_utf8_strndup
	* src/gcompris/gameutil.h: added g_utf8_strndup

2004-11-12  Bruno coudoin  <bruno.coudoin@free.fr>

	Italian sounds resampled to 44100 by Marcello Missiroli
	Upgraded italian sounds release to 1.1
	
	* boards/sounds/it/alphabet/1.ogg:
	* boards/sounds/it/alphabet/10.ogg:
	* boards/sounds/it/alphabet/11.ogg:
	* boards/sounds/it/alphabet/12.ogg:
	* boards/sounds/it/alphabet/13.ogg: