@@ -1,2 +1,4 @@
 Makefile
 Makefile.in
+all_article.spip
+all_boards.xml
