@@ -1,3 +1,13 @@
+2004-11-21  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	complete the work on screenshots creation.
+	First release of the screenshots are online on http://gcompris.net
+	
+	* docs/.cvsignore:
+	* docs/spip_menuboard.xsl:
+	* docs/spip_oneboard.xsl:
+	* docs/spipparser.pl:
+
 2004-11-18  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* docs/create_thumbnails.pl: created, to create thumbnails
